mostly fixed config values not working properly for uniforms with multiple values